Fix dropdown so it doesn't go behind course elements

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -163,6 +163,7 @@ body {
 
 #schedule-dropdown-content {
   width: 300px;
+  z-index: 20;
 }
 
 #schedule-dropdown-add-wrapper {
